// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown should access only enabled items with value during keyboard navigation 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-controls="downshift-:r2:-menu"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-:r2:-label"
    class="Button Button--context"
    id="downshift-:r2:-toggle-button"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-:r2:-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-:r2:-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:r2:-item-0"
      role="option"
    >
      <span>
        With value 1
      </span>
    </li>
    <li
      class="ListItem List__item"
    >
      <span>
        Without value
      </span>
    </li>
    <div
      class="List__item customDiv"
    >
      Div
    </div>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:r2:-item-1"
      role="option"
    >
      <span>
        With value 2
      </span>
    </li>
  </ul>
</div>
`;

exports[`Dropdown should allow for conditional rendering of items 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-controls="downshift-:rb:-menu"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-:rb:-label"
    class="Button Button--context"
    id="downshift-:rb:-toggle-button"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-:rb:-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-:rb:-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
  >
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:rb:-item-0"
      role="option"
    >
      <span>
        With value
      </span>
    </li>
  </ul>
</div>
`;

exports[`Dropdown should render correctly closed 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-controls="downshift-:r0:-menu"
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-labelledby="downshift-:r0:-label"
    class="Button Button--context"
    id="downshift-:r0:-toggle-button"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-:r0:-label"
    class="List"
    id="downshift-:r0:-menu"
    role="listbox"
  />
</div>
`;

exports[`Dropdown should render correctly opened 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-controls="downshift-:r1:-menu"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-:r1:-label"
    class="Button Button--context"
    id="downshift-:r1:-toggle-button"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-:r1:-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-:r1:-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:r1:-item-0"
      role="option"
    >
      <span>
        With value
      </span>
    </li>
  </ul>
</div>
`;

exports[`Dropdown should render correctly with mixed children: array and single ListItem 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-controls="downshift-:r4:-menu"
    aria-expanded="true"
    aria-haspopup="listbox"
    aria-labelledby="downshift-:r4:-label"
    class="Button Button--context"
    id="downshift-:r4:-toggle-button"
    role="combobox"
    tabindex="0"
    type="button"
  >
    Click me!
  </button>
  <ul
    aria-labelledby="downshift-:r4:-label"
    class="List Dropdown__list"
    data-popper-escaped="true"
    data-popper-placement="top-start"
    data-popper-reference-hidden="true"
    id="downshift-:r4:-menu"
    role="listbox"
    style="position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(0px, -3px);"
  >
    <li
      class="ListItem ListItem--disabled List__item"
    >
      <span>
        Disabled
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:r4:-item-0"
      role="option"
    >
      <span>
        one
      </span>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="ListItem ListItem--clickable List__item"
      id="downshift-:r4:-item-1"
      role="option"
    >
      <span>
        two
      </span>
    </li>
  </ul>
</div>
`;
